--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         mode: 'cors',
         headers: {
             'Content-Type': 'application/json',
-            'Access-Control-Request-Method': 'GET, HEAD'
+            'Access-Control-Request-Method': 'GET'
         }
     }).then(async function (data) {
         const jsonData = await data.json()
