--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
 
 
-    fetch('http://localhost:63342/doomsday.json', {
+    fetch('http://localhost:63342/doomsday.json'/*, {
         method: 'GET',
         redirect: 'follow',
         mode: 'cors',
@@ -268,7 +268,7 @@
             'Content-Type': 'application/json',
             'Access-Control-Request-Method': 'GET'
         }
-    }).then(async function (data) {
+    }*/).then(async function (data) {
         const jsonData = await data.json()
 
         const headingElement = document.getElementById('heading');
