--- a/index.html
+++ b/index.html
@@ -263,10 +263,10 @@
     fetch('http://localhost:63342/doomsday.json', {
         method: 'GET',
         redirect: 'follow',
-        mode: 'no-cors',
+        mode: 'cors',
         headers: {
             'Content-Type': 'application/json',
-            //'Access-Control-Request-Method': 'GET'
+            'Access-Control-Request-Method': 'GET'
         }
     }).then(async function (data) {
         const jsonData = await data.json()
