fix(content): it's a joke

--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
             <div class="card-body">
                 <h3 class="card-title">Germany</h3>
                 <p>Trust me, you don't want headlines like <a class="link" href="https://text.npr.org/1087137501">Germany is supposedly building Europe's largest military</a> seen. Because, well, last time it went so well...</p>
+                <p>Ok, that one is a joke!</p>
             </div>
         </div>
 
