--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <h2 class="text-4xl font-bold text-center mb-5 mt-16">Why would we be fucked yet?</h2>
     <p class="text-center">Well, look around! I give you a few reasons:</p>
 
-    <div class="flex justify-center flex-col hero-content lg:flex-row">
+    <div class="flex justify-center flex-col lg:flex-row">
         <div class="card w-96 bg-base-100 shadow-xl">
             <div class="card-body">
                 <h3 class="card-title">War</h3>
@@ -167,7 +167,7 @@
             </div>
         </div>
 
-        <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="card-normal w-96 bg-base-100 shadow-xl">
             <div class="card-body">
                 <h3 class="card-title">Germany</h3>
                 <p>Trust me, you don't want headlines like <a class="link" href="https://text.npr.org/1087137501">Germany is supposedly building Europe's largest military</a> seen. Because, well, last time it went so well...</p>
@@ -175,14 +175,14 @@
             </div>
         </div>
 
-        <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="card-normal w-96 bg-base-100 shadow-xl">
             <div class="card-body">
                 <h3 class="card-title">Pandemic</h3>
                 <p>COVID-19 is still around, while not only having a huge death toll, producing long-term sickness and restricting our way of life as well as affecting mental health.</p>
             </div>
         </div>
 
-        <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="card-normal w-96 bg-base-100 shadow-xl">
             <div class="card-body">
                 <h3 class="card-title">Climate Change</h3>
                 <p>
