--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
         </div>
         <div class="lg:min-w-[960px]">
             <div class="text-center">
-                <h1 class="text-9xl font-bold" id="heading">
+                <h1 class="text-6xl font-bold md:text-9xl" id="heading">
                     I honestly don't know
                 </h1>
                 <p id="percentage" class="text-4xl font-bold mt-12" title="State of being fucked"></p>
-                <p class="mt-12 mb-5 text-4xl" id="subtext">
+                <p class="mt-12 mb-5 text-3xl md:text-4xl" id="subtext">
                     There's <b>certainly</b> someone out there doing something <b>stupid</b>!
                 </p>
                 <p class="mt-16">
@@ -140,8 +140,9 @@
     <h2 class="text-4xl font-bold text-center mb-5 mt-16">Why would we be fucked yet?</h2>
     <p class="text-center">Well, look around! I give you a few reasons:</p>
 
-    <div class="flex justify-center flex-col lg:flex-row">
+    <div class="flex justify-center flex-col lg:flex-row gap-2 mt-12">
         <div class="card w-96 bg-base-100 shadow-xl">
+            <figure><img src="/img/explosion.jpg" class="max-h-[200px] w-full object-cover" alt="Nuclear bomb explosion mushroom cloud" /></figure>
             <div class="card-body">
                 <h3 class="card-title">War</h3>
                 <p>A superpower in possession of nuclear weapons with a maniac leader started a war lately.</p>
@@ -149,27 +150,30 @@
             </div>
         </div>
 
-        <div class="card-normal w-96 bg-base-100 shadow-xl">
+        <div class="card w-96 bg-base-100 shadow-xl">
+            <figure><img src="/img/bundestag.jpg" class="max-h-[200px] w-full object-cover" alt="German Bundestag with German flag" /></figure>
             <div class="card-body">
                 <h3 class="card-title">Germany</h3>
                 <p>Trust me, you don't want headlines like <a class="link" href="https://text.npr.org/1087137501">Germany is supposedly building Europe's largest military</a> seen. Because, well, last time it went so well...</p>
-                <p>Ok, that one is a joke!</p>
+                <p>Ok, that one is a joke! Luckily it's not like that anymore.</p>
             </div>
         </div>
 
-        <div class="card-normal w-96 bg-base-100 shadow-xl">
+        <div class="card w-96 bg-base-100 shadow-xl">
+            <figure><img src="/img/covid.jpg" class="max-h-[200px] w-full object-cover" alt="Earth depicted as corona virus - covid" /></figure>
             <div class="card-body">
                 <h3 class="card-title">Pandemic</h3>
                 <p>COVID-19 is still around, while not only having a huge death toll, producing long-term sickness and restricting our way of life as well as affecting mental health.</p>
             </div>
         </div>
 
-        <div class="card-normal w-96 bg-base-100 shadow-xl">
+        <div class="card w-96 bg-base-100 shadow-xl">
+            <figure><img src="/img/desert.jpg" class="max-h-[200px] w-full object-cover" alt="Dry tree in sand desert" /></figure>
             <div class="card-body">
                 <h3 class="card-title">Climate Change</h3>
                 <p>
                     And then... There's climate change.
-                    This fucker, without a doubt, will make us, as a species with interplanetary ambitions and being relatively intelligent, hit the coffin.
+                    This fucker – without a doubt – will make us, as a species with interplanetary ambitions and being relatively intelligent, hit the coffin.
                     If we're not going to pivot anytime soon, that is!
                 </p>
             </div>
