feat(button): another button
continue reading button (styled link)

--- a/index.html
+++ b/index.html
@@ -179,6 +179,10 @@
             </div>
         </div>
     </div>
+
+    <p class="mt-16 text-center">
+        <a class="btn btn-primary" href="#mytake" title="Read the author's take">The author's take!</a>
+    </p>
 </main>
 
 <section class="min-h-screen flex grow-1 justify-center flex-row mt-12 w-min-full" id="mytake">
