fix(style): text style improvements

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <p class="mb-4">NATO countries will start everything they have trying to prevent Russia from starting any more nuclear weapons.
     Which Russia will counter with throwing at them everything they still got. The same is valid for the other way around.</p>
 
-    <h3 class="text-1xl font-bold mb-3 mt-12">Would anyone survive?</h3>
+    <h4 class="text-xl font-bold mb-3 mt-12">Would anyone survive?</h4>
     <p class="mb-4">Yep, but for many of them live will be real torture.
     Most will be sick (not only by radiation), starve or be involved into major and minor wars and conflicts.
     Technology, electrical energy and heating will be rare and expensive.
@@ -231,7 +231,7 @@
     <p class="mb-4">But! There's a bride side (You should know by now that I like to be sarcastic)!
     The following nuclear winters and the destruction of most of our industries might prevent the worst effects of climate change from happening.</p>
 
-    <h3 class="text-1xl font-bold mb-3 mt-12">And Climate change?</h3>
+    <h3 class="text-2xl font-bold mb-3 mt-16">And Climate change?</h3>
     <p class="mb-4">In the long run this is even scarier.</p>
     <p class="mb-4">Given, we managed to avoid total annihilation, the following task at hand is even more difficult.
     We will have to pivot our way of life. Instead of economic growth we have to change to a more sustainable way of life.</p>
