fix(url): not the local test!
fix url!

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
     })
     ;
 </script>
-<script src="http://0.0.0.0:8080/arewefuckedyet.com/votejs" defer async></script>
+<script src="https://yesno.pagereply.com/arewefuckedyet.com/votejs" defer async></script>
 <!--<script src="http://0.0.0.0:3000/logjs.php" defer async></script>-->
 
 </body>
