fix(test): test build/deploy

--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
 </section>
 
 <script type="application/javascript">
+    // tood: simplify
     const getHeading = function getHeading(doomsday) {
         if (!doomsday || (!doomsday.time && doomsday.time !== 0)) {
             return "I really don\'t know";
