fix(vote): font size
make font size bigger for vote heading

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <header class="min-h-screen">
     <div class="mt-4 mb-4 text-center lg:min-w-full lg:mb-24 lg:mt-16">
         <form id="vote_yesno">
-            <p class="font-bold text-xl mb-4">What do you think?</p>
+            <p class="font-bold text-2xl mb-4">What do you think?</p>
             <button class="btn btn-primary disabled:text-slate-600" name="yes" id="vote_yes">Yes</button>
             <button class="btn btn-secondary disabled:text-slate-600" name="no" id="vote_no">No</button>
         </form>
