--- a/index.html
+++ b/index.html
@@ -232,6 +232,13 @@
     <p class="mb-4">NATO countries will start everything they have trying to prevent Russia from starting any more nuclear weapons.
     Which Russia will counter with throwing at them everything they still got. The same is valid for the other way around.</p>
 
+    <p class="mb-4 relative block">
+        If you're interested in this topic and want to read a fictional story about it I can really recommend
+        <img id="aff1-img" class="absolute right-0" style="display: none" border="0" src="https://ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=1529076935&Format=_SL110_&ID=AsinImage&MarketPlace=DE&ServiceVersion=20070822&WS=1&tag=awfaffiliate-21&language=de_DE" alt="Ken Follet Never book cover">
+        <a class="link" id="aff1" href="https://amzn.to/3NzZXrO">Ken Follet's latest book <q>Never</q> <span class="text-xs">(Affiliate link!)</span></a>.
+        I've recently read this book and can very much recommend it.
+    </p>
+
     <h4 class="text-xl font-bold mb-3 mt-12">Would anyone survive?</h4>
     <p class="mb-4">Yep, but for many of them live will be real torture.
     Most will be sick (not only by radiation), starve or be involved into major and minor wars and conflicts.
@@ -252,6 +259,23 @@
 </section>
 
 <script type="application/javascript">
+    const aff1 = document.getElementById('aff1');
+    const aff1Img = document.getElementById('aff1-img');
+    if (aff1 && aff1Img) {
+        let previewHover = function (e) {
+            aff1Img.style.display = 'block';
+            aff1Img.style.top = "-2em";
+        };
+        aff1.addEventListener('mouseenter', previewHover);
+        aff1.addEventListener('click', previewHover);
+        aff1.addEventListener('mouseout', function (e) {
+            setTimeout(function () {
+                aff1Img.style.display = 'none';
+            }, 1000);
+        })
+    }
+
+
 
     // tood: simplify
     const getHeading = function getHeading(doomsday) {
@@ -414,7 +438,7 @@
     })
     ;
 </script>
-<script src="https://yesno.pagereply.com/arewefuckedyet.com/votejs" defer async></script>
+<script src="http://localhost:8080/arewefuckedyet.com/votejs" defer async></script>
 <!--<script src="http://0.0.0.0:3000/logjs.php" defer async></script>-->
 
 </body>
