--- a/index.html
+++ b/index.html
@@ -197,64 +197,68 @@
 
 <section class="min-h-screen flex grow-1 justify-center flex-row mt-12 w-min-full" id="mytake">
     <div class="w-min-[250px] w-max-[100%] lg:w-[640px] p-4">
-    <h2 class="text-4xl font-bold mb-5 mt-16">The author's take</h2>
-    <p class="mb-4">Although there are many bad things happening right now there's still hope.</p>
-    <p>So no, I don't think that we're fucked yet, but nonetheless, we're pretty close!</p>
+        <h2 class="text-4xl font-bold mb-5 mt-16">The author's take</h2>
+        <p class="mb-4">Although there are many bad things happening right now there's still hope.</p>
+        <p>So no, I don't think that we're fucked yet, but nonetheless, we're pretty close!</p>
 
-    <h3 class="text-2xl font-bold mb-3 mt-12">The war in Ukraine?</h3>
-    <p class="mb-4">Yep, it is bad and war is always bad. But it's not WW3.
-        And right now I don't think it's going to happen.</p>
+        <h3 class="text-2xl font-bold mb-3 mt-12">The war in Ukraine?</h3>
+        <p class="mb-4">Yep, it is bad and war is always bad. But it's not WW3.
+            And right now I don't think it's going to happen.</p>
 
-    <p class="mb-4">We still have some options left to make this war either stop or at least not making it spread.</p>
+        <p class="mb-4">We still have some options left to make this war either stop or at least not making it spread.</p>
 
-    <p class="mb-4">There are many people right now screaming for military actions or at least building or buying fancy weapons.
-    In my opinion, these people want war. They're much like that maniac president who started the war. Don't listen to them!</p>
+        <p class="mb-4">There are many people right now screaming for military actions or at least building or buying fancy weapons.
+        In my opinion, these people want war. They're much like that maniac president who started the war. Don't listen to them!</p>
 
-    <h3 class="text-2xl font-bold mb-3 mt-12">Why don't we interfere, you might ask?</h3>
-    <p class="mb-4">Well, unfortunately that one is easy. And it's probably good that it's easy!</p>
+        <h3 class="text-2xl font-bold mb-3 mt-12">Why don't we interfere, you might ask?</h3>
+        <p class="mb-4">Well, unfortunately that one is easy. And it's probably good that it's easy!</p>
 
-    <p class="mb-4">Because, given one NATO country starts battling with the Russian Federation (or the other way around), this will get every NATO member into a war against Russia.
-    If and when this happens, the world as we know it will most likely be over.</p>
+        <p class="mb-4">Because, given one NATO country starts battling with the Russian Federation (or the other way around), this will get every NATO member into a war against Russia.
+        If and when this happens, the world as we know it will most likely be over.</p>
 
-    <p class="mb-4">It's pretty safe to assume that someone with Putin's personality will try to get at his enemies at every cost.
-        Which means: They will start attacking with nuclear weapons pretty soon.</p>
+        <p class="mb-4">It's pretty safe to assume that someone with Putin's personality will try to get at his enemies at every cost.
+            Which means: They will start attacking with nuclear weapons pretty soon.</p>
 
-    <p class="mb-4">There's a phrase which (paraphrasing) goes like this:</p>
+        <p class="mb-4">There's a phrase which (paraphrasing) goes like this:</p>
 
-    <q class="quote italic ml-4">In a war there will mainly be losers on both sides.</q>
+        <q class="quote italic ml-4">In a war there will mainly be losers on both sides.</q>
 
-    <p class="mt-4 mb-4">In a nuclear war there will only be losers globally. Each and everyone will lose.</p>
+        <p class="mt-4 mb-4">In a nuclear war there will only be losers globally. Each and everyone will lose.</p>
 
-    <p class="mb-4">Their livelihood, their relatives, their friends and pretty much likely their lives.</p>
-    <p class="mb-4">The reason for that is: If one nuclear power started sending out only one nuclear warhead, the other side will try to eradicate the aggressor by all means before they'll start another one.
-    I can't stretch this enough! One nuclear weapon will most likely lead to total destruction of most of the world.</p>
+        <p class="mb-4">Their livelihood, their relatives, their friends and pretty much likely their lives.</p>
+        <p class="mb-4">The reason for that is: If one nuclear power started sending out only one nuclear warhead, the other side will try to eradicate the aggressor by all means before they'll start another one.
+        I can't stretch this enough! One nuclear weapon will most likely lead to total destruction of most of the world.</p>
 
-    <p class="mb-4">NATO countries will start everything they have trying to prevent Russia from starting any more nuclear weapons.
-    Which Russia will counter with throwing at them everything they still got. The same is valid for the other way around.</p>
+        <p class="mb-4">NATO countries will start everything they have trying to prevent Russia from starting any more nuclear weapons.
+        Which Russia will counter with throwing at them everything they still got. The same is valid for the other way around.</p>
 
-    <p class="mb-4 relative block">
-        If you're interested in this topic and want to read a fictional story about it I can really recommend
-        <img id="aff1-img" class="absolute right-0" style="display: none" border="0" src="https://ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=1529076935&Format=_SL110_&ID=AsinImage&MarketPlace=DE&ServiceVersion=20070822&WS=1&tag=awfaffiliate-21&language=de_DE" alt="Ken Follet Never book cover">
-        <a class="link" id="aff1" href="https://amzn.to/3NzZXrO">Ken Follet's latest book <q>Never</q> <span class="text-xs">(Affiliate link!)</span></a>.
-        I've recently read this book and can very much recommend it.
-    </p>
+        <p class="mb-4 relative block">
+            If you're interested in this topic and want to read a fictional story about it I can really recommend
+            <img id="aff1-img" class="absolute right-0" style="display: none" border="0" src="https://ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=1529076935&Format=_SL110_&ID=AsinImage&MarketPlace=DE&ServiceVersion=20070822&WS=1&tag=awfaffiliate-21&language=de_DE" alt="Ken Follet Never book cover">
+            <a class="link" id="aff1" href="https://amzn.to/3NzZXrO">Ken Follet's latest book <q>Never</q> <span class="text-xs">(Affiliate link!)</span></a>.
+            I've recently read this book and can very much recommend it.
+        </p>
 
-    <h4 class="text-xl font-bold mb-3 mt-12">Would anyone survive?</h4>
-    <p class="mb-4">Yep, but for many of them live will be real torture.
-    Most will be sick (not only by radiation), starve or be involved into major and minor wars and conflicts.
-    Technology, electrical energy and heating will be rare and expensive.
-    Many of us would have to be farmers, gatherers and hunters, again.</p>
+        <h4 class="text-xl font-bold mb-3 mt-12">Would anyone survive?</h4>
+        <p class="mb-4">Yep, but for many of them live will be real torture.
+        Most will be sick (not only by radiation), starve or be involved into major and minor wars and conflicts.
+        Technology, electrical energy and heating will be rare and expensive.
+        Many of us would have to be farmers, gatherers and hunters, again.</p>
 
-    <p class="mb-4">But! There's a bride side (You should know by now that I like to be sarcastic)!
-    The following nuclear winters and the destruction of most of our industries might prevent the worst effects of climate change from happening.</p>
+        <p class="mb-4">But! There's a bride side (You should know by now that I like to be sarcastic)!
+        The following nuclear winters and the destruction of most of our industries might prevent the worst effects of climate change from happening.</p>
 
-    <h3 class="text-2xl font-bold mb-3 mt-16">And Climate change?</h3>
-    <p class="mb-4">In the long run this is even scarier.</p>
-    <p class="mb-4">Given, we managed to avoid total annihilation, the following task at hand is even more difficult.
-    We will have to pivot our way of life. Instead of economic growth we have to change to a more sustainable way of life.</p>
+        <h3 class="text-2xl font-bold mb-3 mt-16">And Climate change?</h3>
+        <p class="mb-4">In the long run this is even scarier.</p>
+        <p class="mb-4">Given, we managed to avoid total annihilation, the following task at hand is even more difficult.
+        We will have to pivot our way of life. Instead of economic growth we have to change to a more sustainable way of life.</p>
 
-    <p class="mb-4">In the short run this might be painful, but, in the long run, it will save us and most of our technology and scientific achievements.
-    So please, try to do your thing by saving energy, eating local food and try conserving and using stuff as long as possible.</p>
+        <p class="mb-4">In the short run this might be painful, but, in the long run, it will save us and most of our technology and scientific achievements.
+        So please, try to do your thing by saving energy, eating local food and try conserving and using stuff as long as possible.</p>
+
+        <p class="mb-4">
+            And if you really want to make a difference, check out my friend Tiago's app <a href="https://changeit.app/" class="link">Changeit</a>.
+        </p>
     </div>
 </section>
 
