fix(typo): what the
bright side of course

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         Technology, electrical energy and heating will be rare and expensive.
         Many of us would have to be farmers, gatherers and hunters, again.</p>
 
-        <p class="mb-4">But! There's a bride side (You should know by now that I like to be sarcastic)!
+        <p class="mb-4">But! There's a bright side (You should know by now that I like to be sarcastic)!
         The following nuclear winters and the destruction of most of our industries might prevent the worst effects of climate change from happening.</p>
 
         <h3 class="text-2xl font-bold mb-3 mt-16">And Climate change?</h3>
